--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,10 @@ services:
     environment:
       PORT: 3000
       NODE_ENV: production
+      API_SERVICE_HOST: api-service
+      API_SERVICE_PORT: 5000
+      AUTH_SERVICE_HOST: auth-service
+      AUTH_SERVICE_PORT: 5001
     networks:
       - microservices-network
     depends_on:
