--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,10 +97,30 @@ services:
       - api-service
       - auth-service
 
+  jenkins:
+    build:
+      context: ./jenkins
+      dockerfile: Dockerfile
+    container_name: jenkins
+    restart: unless-stopped
+    ports:
+      - "8081:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - microservices-network
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    user: root
+
 networks:
   microservices-network:
     driver: bridge
 
 volumes:
   mongodb_data:
+    driver: local
+  jenkins_home:
     driver: local
