--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,8 @@ COPY next.config.js ./
 # Install dependencies with BuildKit cache mount for faster builds
 # This caches npm's package cache between builds (speeds up downloads)
 RUN --mount=type=cache,target=/root/.npm \
-    npm install --prefer-offline --no-audit
+    --mount=type=cache,target=/app/node_modules \
+    npm ci --prefer-offline --no-audit --progress=false
 
 # Copy source code
 COPY . .
